api/swim_form/src/tests/derive/form/double_body_attr.stderr
error: At most one field can replace the body.
  --> src/tests/derive/form/double_body_attr.rs:23:16
   |
23 |         #[form(body)]
   |                ^^^^
